--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: survHEinla
 Title: Survival Analysis in Health Economic Evaluation using INLA
 Version: 0.0.1
-Date: 2022-01-15
+Date: 2023-03-15
 Authors@R:c(
     person(given = "Gianluca",family = "Baio",role = c("aut", "cre"),email = "g.baio@ucl.ac.uk"))
-URL: https://github.com/giabaio/survHE, https://gianluca.statistica.it/
-BugReports: https://github.com/giabaio/survHE/issues
+URL: https://github.com/giabaio/survHEinla, https://gianluca.statistica.it/software/survhe
+BugReports: https://github.com/giabaio/survHEinla/issues
 Description: A module to complement the backbone structure of the package survHE and 
     expand its functionality to run survival models under a Bayesian approach (based 
-    on Integrated Nested Laplace Approximation). <doi:10.18637/jss.v095.i14>.
+    on Integrated Nested Laplace Approximation; the underlying 'INLA' package is available 
+    for download at <https://inla.r-inla-download.org/R/stable/>). <doi:10.18637/jss.v095.i14>.
 License: GPL (>=3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -18,5 +19,10 @@ Depends:
     survHE,
     R (>= 3.6.0),
     dplyr
+Imports: 
+    flexsurv,
+    INLA
+Additional_repositories: 
+    https://inla.r-inla-download.org/R/stable/
 SystemRequirements: GNU make
 NeedsCompilation: yes
