--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: survHEinla
 Title: Survival Analysis in Health Economic Evaluation using INLA
-Version: 0.0.2
-Date: 2025-03-05
+Version: 0.0.3
+Date: 2025-07-09
 Authors@R: c(
     person(given = "Gianluca",family = "Baio",role = c("aut", "cre"),email = "g.baio@ucl.ac.uk"))
 URL: https://github.com/giabaio/survHEinla, https://gianluca.statistica.it/software/survhe
@@ -24,5 +24,7 @@ Imports:
     INLA
 Additional_repositories:
     https://inla.r-inla-download.org/R/stable/
+Config/extra-repositories: 
+    https://inla.r-universe.dev
 SystemRequirements: GNU make
 NeedsCompilation: yes
